@startuml
top to bottom direction
scale 0.85

skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam arrowColor Black
skinparam linetype ortho
skinparam shadowing false
skinparam packageStyle rectangle
skinparam nodesep 10
skinparam ranksep 28

title DC-01.4: Auditoría\n(IAuditoriaServicio es inyectada en todos los use cases de DC-01.1, DC-01.2)

package "Domain" #EFF6FF {
    class Usuario {
        +int Id
        +string NombreCompleto
        ' ver DC-01.2 para atributos completos
    }

    class AuditoriaLog {
        +int Id
        +DateTime EventoEn
        +string ModuloNombre
        +string EntidadNombre
        +string EntidadId
        +string AccionNombre
        +string ResumenTexto
        +string? ValoresAnterioresJson
        +string? ValoresNuevosJson
        +int? EjecutadoPorUsuarioId
    }

    Usuario -[hidden]down-> AuditoriaLog
}

package "Application" #F0FDF4 {
    interface IAuditoriaServicio <<Interface>> {
        +RegistrarAsync(
        moduloNombre: string,
        entidadNombre: string,
        entidadId: string,
        accionNombre: string,
        resumenTexto: string,
        ejecutadoPorUsuarioId: int?,
        valoresAnterioresJson: string?,
        valoresNuevosJson: string?) : void

        +ConsultarAsync(
        filtros: AuditoriaFiltroDto) : AuditoriaConsultaResultadoDto
    }

    interface IRepositorioAuditoriaLog <<Interface>> {
        +AgregarAsync(
        moduloNombre: string,
        entidadNombre: string,
        entidadId: string,
        accionNombre: string,
        resumenTexto: string,
        ejecutadoPorUsuarioId: int?,
        valoresAnterioresJson: string?,
        valoresNuevosJson: string?) : void

        +ConsultarAsync(
        filtros: AuditoriaFiltroDto) : AuditoriaConsultaResultadoDto
    }

    class ConsultarAuditoriaUseCase <<UseCase>> {
        -IAuditoriaServicio _auditoriaServicio
        +EjecutarAsync(
        filtros: AuditoriaFiltroDto) : AuditoriaConsultaResultadoDto
    }

    note bottom of IAuditoriaServicio
        Consumida por:
        · LoginUseCase (DC-01.1)
        · CerrarSesionUseCase (DC-01.1)
        · CrearUsuarioUseCase (DC-01.2)
        · ActualizarUsuarioUseCase (DC-01.2)
        · EliminarUsuarioUseCase (DC-01.2)
    end note

    IAuditoriaServicio -[hidden]down-> IRepositorioAuditoriaLog
    IRepositorioAuditoriaLog -[hidden]down-> ConsultarAuditoriaUseCase
}

package "Infrastructure" #FFF7ED {
    class ServicioAuditoria <<Service>> {
        -IRepositorioAuditoriaLog _repositorioAuditoria
        +RegistrarAsync(
        moduloNombre: string,
        entidadNombre: string,
        entidadId: string,
        accionNombre: string,
        resumenTexto: string,
        ejecutadoPorUsuarioId: int?,
        valoresAnterioresJson: string?,
        valoresNuevosJson: string?) : void

        +ConsultarAsync(
        filtros: AuditoriaFiltroDto) : AuditoriaConsultaResultadoDto
    }

    class RepositorioAuditoriaLog <<Repository>> {
        -AppDbContext _context
        +AgregarAsync(...) : void
        +ConsultarAsync(
        filtros: AuditoriaFiltroDto) : AuditoriaConsultaResultadoDto
    }

    ServicioAuditoria -[hidden]down-> RepositorioAuditoriaLog
}

package "Presentation" #FDF4FF {
    class AuditoriaViewModel <<ViewModel>> {
        +ObservableCollection~AuditoriaLogItemDto~ Registros
        +AuditoriaFiltroDto Filtros
        +ICommand ConsultarCommand
        +CargarRegistrosAsync() : void
    }
}

Domain -[hidden]down-> Application
Application -[hidden]down-> Infrastructure
Infrastructure -[hidden]down-> Presentation

' Dominio
Usuario "1" --> "0..*" AuditoriaLog : genera

' Implementaciones
ServicioAuditoria ..|> IAuditoriaServicio : implementa
RepositorioAuditoriaLog ..|> IRepositorioAuditoriaLog : implementa
ServicioAuditoria --> IRepositorioAuditoriaLog : usa

' Use cases
ConsultarAuditoriaUseCase --> IAuditoriaServicio : usa

' Presentación
AuditoriaViewModel --> ConsultarAuditoriaUseCase : invoca
@enduml